tests/ui/type-alias-impl-trait/multi-error.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/multi-error.rs:17:17
   |
LL |     fn foo() -> (Self::Bar<u32>, Self::Baz) {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument `u32` is not a generic parameter
   |
note: for this opaque type
  --> $DIR/multi-error.rs:15:19
   |
LL |     type Bar<T> = impl Sized;
   |                   ^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/multi-error.rs:19:10
   |
LL |     type Bar<T> = impl Sized;
   |                   ---------- the expected opaque type
...
LL |         ((), ())
   |          ^^ expected opaque type, found `()`
   |
   = note: expected opaque type `<() as Foo>::Bar<u32>`
                found unit type `()`
note: this item must have the opaque type in its signature in order to be able to register hidden types
  --> $DIR/multi-error.rs:17:8
   |
LL |     fn foo() -> (Self::Bar<u32>, Self::Baz) {
   |        ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
